--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -63,7 +63,8 @@ jobs:
           hugo \
             --gc \
             --minify \
-            --baseURL "${{ steps.pages.outputs.base_url }}/"          
+            --baseURL "${{ steps.pages.outputs.base_url }}/"
+            touch ./public/.nojekyll
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
