--- a/config/_default/_module.toml
+++ b/config/_default/_module.toml
@@ -1,4 +1,4 @@
 # Use submodule instead of module to use theme
 
-[[imports]]
-path = "github.com/CaiJimmy/hugo-theme-stack/v3"
+# [[imports]]
+# path = "github.com/CaiJimmy/hugo-theme-stack/v3"
